# zai-rs

./: .clippy.toml  .gitignore  AGENT.md  Cargo.toml  README.md  REGISTRY_IMPROVEMENTS.md  TOOL_SYSTEM_SUMMARY.md  ZAI_TOOLS_FINAL_SUMMARY.md  ZAI_TOOLS_V2_OPTIMIZATION.md  rustfmt.toml  text.txt
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml
docs/: ADVANCED_TOPICS.md  BEST_PRACTICES.md  ERROR_HANDLING.md  FAQ.md  FUNCTION_CALL_COMPARISON.md  GETTING_STARTED.md  OCR_GUIDE.md  README.md
docs/plans/: 2026-02-23-dx-optimization-design.md  2026-02-23-dx-optimization-impl.md
examples/: async_chat_text.rs  audio_to_text.rs  audio_transcribe.rs  batches_cancel.rs  batches_create.rs  batches_list.rs  batches_retrieve.rs  chat.rs  chat_coding_plan.rs  chat_loop.rs  chat_stream.rs  chat_text.rs  chat_vision.rs  chat_voice.rs  embedding.rs  file_parser_demo.rs  files_content.rs  files_delete.rs  files_list.rs  files_upload.rs  function_call.rs  function_call_demo.rs  function_call_with_toolkits.rs  function_call_with_zai_tools.rs  gen_image.rs  gen_video.rs  glm45_thinking_mode.rs  knowledge_capacity.rs  knowledge_create.rs  knowledge_delete.rs  knowledge_document_delete.rs  knowledge_document_detail.rs  knowledge_document_image_list.rs  knowledge_document_list.rs  knowledge_document_reembedding.rs  knowledge_document_upload_file.rs  knowledge_document_upload_url.rs  knowledge_list.rs  knowledge_retrieve.rs  knowledge_update.rs  (+16 more)
examples/mcp/client/: Cargo.toml
examples/mcp/client/src/: main.rs
examples/mcp/list_remote_mcp_tools/: Cargo.toml
examples/mcp/list_remote_mcp_tools/src/: main.rs
examples/mcp/servers/: Cargo.toml  README.md
examples/realtime/: README.md  audio_chat.rs  audio_chat_direct.rs  audio_chat_simple.rs  video_chat.rs
examples/web_chat/: ARCHITECTURE.md  Cargo.toml  README.md  REFACTORING_SUMMARY.md  index.html  server.rs
examples/web_chat/src/: main.rs
examples/web_chat/src/client/: mod.rs
examples/web_chat/src/client/error_handler/: mod.rs
examples/web_chat/src/server/: config.rs  error.rs  middleware.rs  mod.rs  state.rs  utils.rs
examples/web_chat/src/server/models/: chat.rs  mod.rs  session.rs
examples/web_chat/src/server/routes/: chat.rs  health.rs  index.rs  mod.rs  static_files.rs
examples/web_chat/static/: index.html  style.css
examples/web_chat/static/css/: main.css
examples/web_chat/static/js/: app.js
src/: lib.rs  traits_macro.rs
src/agent/: mod.rs  request.rs  response.rs
src/batches/: cancel.rs  create.rs  list.rs  mod.rs  retrieve.rs  types.rs
src/client/: error.rs  error_handler.rs  http.rs  mod.rs  wss.rs
src/file/: content.rs  data.rs  delete.rs  list.rs  mod.rs  request.rs  response.rs  upload.rs
src/io/: mod.rs
src/knowledge/: capacity.rs  create.rs  delete.rs  document_delete.rs  document_image_list.rs  document_list.rs  document_reembedding.rs  document_retrieve.rs  document_upload_file.rs  document_upload_url.rs  list.rs  mod.rs  retrieve.rs  types.rs  update.rs
src/model/: base.rs  base_requst.rs  chat_base_request.rs  chat_base_requst.rs  chat_base_response.rs  chat_message_types.rs  chat_models.rs  chat_stream_response.rs  mod.rs  model_validate.rs  models.rs  sse_parser.rs  stream_ext.rs  tools.rs  traits.rs
src/model/async_chat/: data.rs
src/model/async_chat_get/: data.rs
src/model/audio_to_speech/: data.rs  mod.rs  request.rs  tts_model.rs
src/model/audio_to_text/: audio_asr_model.rs  data.rs  mod.rs  model.rs  request.rs  response.rs
src/model/chat/: data.rs  mod.rs  traits.rs
src/model/gen_image/: data.rs  image_model.rs  image_request.rs  image_response.rs  mod.rs
src/model/gen_video_async/: data.rs  mod.rs  video_model.rs  video_request.rs
src/model/moderation/: data.rs  mod.rs  models.rs
src/model/ocr/: data.rs  mod.rs  model.rs  request.rs  response.rs
src/model/text_embedded/: data.rs  request.rs  response.rs
src/model/text_rerank/: data.rs  request.rs  response.rs
src/model/text_to_audio/: data.rs  mod.rs  model.rs  request.rs
src/model/text_tokenizer/: data.rs  request.rs  response.rs
src/model/voice_clone/: data.rs  mod.rs  model.rs  request.rs  response.rs
src/model/voice_delete/: data.rs  mod.rs  request.rs  response.rs
src/model/voice_list/: data.rs  request.rs  response.rs
src/realTime/: client.rs  mod.rs  models.rs  session.rs  types.rs
src/real_time/: client.rs  client.rs.backup  client_events.rs  data.rs  mod.rs  models.rs  rt_models.rs  server_events.rs  session.rs  traits.rs  types.rs
src/tool/: mod.rs
src/tool/file_parser_create/: data.rs  mod.rs  request.rs  response.rs
src/tool/file_parser_result/: data.rs  mod.rs  request.rs  response.rs
src/tool/web_search/: data.rs  mod.rs  request.rs  response.rs
src/toolkits/: cache.rs  core.rs  error.rs  executor.rs  llm.rs  macros.rs  mod.rs  rmcp_kits.rs
src/tools/: core.rs  executor.rs  macros.rs  mod.rs
tests/: integration_tests.rs  serialize_tests.rs
tests/common/: mock_server.rs  mod.rs
zai-tools/: Cargo.toml  README.md
zai-tools/benches/: registry_performance.rs  tool_execution.rs
zai-tools/docs/: GUIDE.md
zai-tools/src/: config.rs  core.rs  error.rs  executor.rs  lib.rs  macros.rs  monitoring.rs  registry.rs
zai-tools/src/builtin/: calculator.rs  mod.rs
zai-tools/tests/: integration_tests.rs
