[package]
name = "zai-rs"
version = "0.1.0"
edition = "2021"


[[example]]
name = "function_call"
path = "examples/function_call.rs"

[[example]]
name = "chat_text"
path = "examples/chat_text.rs"

[[example]]
name = "chat_vision"
path = "examples/chat_vision.rs"

[[example]]
name = "chat_voice"
path = "examples/chat_voice.rs"

[[example]]
name = "chat_loop"
path = "examples/chat_loop.rs"

[[example]]
name = "async_chat_text"
path = "examples/async_chat_text.rs"

[[example]]
name = "function_call_with_zai_tools"
path = "examples/function_call_with_zai_tools.rs"

[[example]]
name = "gen_video"
path = "examples/gen_video.rs"

[[example]]
name = "gen_image"
path = "examples/gen_image.rs"


[[example]]
name = "tts_speech"
path = "examples/tts_speech.rs"

[[example]]
name = "voice_clone"
path = "examples/voice_clone.rs"

[[example]]
name = "voice_list"
path = "examples/voice_list.rs"

[[example]]
name = "voice_delete"
path = "examples/voice_delete.rs"

[[example]]
name = "files_list"
path = "examples/files_list.rs"



[[example]]
name = "files_upload"
path = "examples/files_upload.rs"



[[example]]
name = "files_delete"
path = "examples/files_delete.rs"

[[example]]
name = "files_content"
path = "examples/files_content.rs"




[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
env_logger = "0.11.8"
log = "0.4"
tokio = { version = "1.47.1", features = ["full"] }
jsonschema = "0.32"
validator = { version = "0.20.0", features = ["derive"] }
url = "2.5.4"
reqwest = { version = "0.12.23", features = ["json", "multipart", "stream"] }
anyhow = "1"
base64 = "0.22.1"
chrono = "0.4"
async-trait = "0.1"
thiserror = "1"
futures = "0.3"
