[package]
name = "zai-rs"
version = "0.1.7"
edition = "2024"
authors = ["anlang <2682525840@qq.com>"]
description = "一个 Rust SDK, 用于调用 智普AI API"
documentation = "https://docs.rs/zai-rs"
repository = "https://github.com/AnlangA/zai-rs"
license = "MIT"


[[example]]
name = "function_call"
path = "examples/function_call.rs"

[[example]]
name = "chat_text"
path = "examples/chat_text.rs"

[[example]]
name = "chat_vision"
path = "examples/chat_vision.rs"

[[example]]
name = "chat_voice"
path = "examples/chat_voice.rs"

[[example]]
name = "chat_loop"
path = "examples/chat_loop.rs"

[[example]]
name = "chat_stream"
path = "examples/chat_stream.rs"

[[example]]
name = "async_chat_text"
path = "examples/async_chat_text.rs"

[[example]]
name = "function_call_with_toolkits"
path = "examples/function_call_with_toolkits.rs"

[[example]]
name = "gen_video"
path = "examples/gen_video.rs"

[[example]]
name = "gen_image"
path = "examples/gen_image.rs"

[[example]]
name = "tts_speech"
path = "examples/tts_speech.rs"

[[example]]
name = "voice_clone"
path = "examples/voice_clone.rs"

[[example]]
name = "voice_list"
path = "examples/voice_list.rs"

[[example]]
name = "voice_delete"
path = "examples/voice_delete.rs"

[[example]]
name = "files_list"
path = "examples/files_list.rs"

[[example]]
name = "files_upload"
path = "examples/files_upload.rs"

[[example]]
name = "files_delete"
path = "examples/files_delete.rs"

[[example]]
name = "files_content"
path = "examples/files_content.rs"


[[example]]
name = "web_search"
path = "examples/web_search.rs"

[[example]]
name = "audio_transcribe"
path = "examples/audio_transcribe.rs"

[[example]]
name = "embedding"
path = "examples/embedding.rs"

[[example]]
name = "rerank"
path = "examples/rerank.rs"

[[example]]
name = "tokenizer"
path = "examples/tokenizer.rs"

[[example]]
name = "simple_moderation"
path = "examples/simple_moderation.rs"

[[example]]
name = "file_parser_demo"
path = "examples/file_parser_demo.rs"

[[example]]
name = "batches_create"
path = "examples/batches_create.rs"

[[example]]
name = "batches_retrieve"
path = "examples/batches_retrieve.rs"

[[example]]
name = "batches_cancel"
path = "examples/batches_cancel.rs"

[[example]]
name = "knowledge_list"
path = "examples/knowledge_list.rs"

[[example]]
name = "knowledge_create"
path = "examples/knowledge_create.rs"

[[example]]
name = "knowledge_retrieve"
path = "examples/knowledge_retrieve.rs"

[[example]]
name = "knowledge_update"
path = "examples/knowledge_update.rs"

[[example]]
name = "knowledge_delete"
path = "examples/knowledge_delete.rs"

[[example]]
name = "knowledge_capacity"
path = "examples/knowledge_capacity.rs"

[[example]]
name = "knowledge_document_list"
path = "examples/knowledge_document_list.rs"

[[example]]
name = "knowledge_document_upload_url"
path = "examples/knowledge_document_upload_url.rs"

[[example]]
name = "chat_coding_plan"
path = "examples/chat_coding_plan.rs"

[[example]]
name = "translation_bot"
path = "examples/translation_bot.rs"

[[example]]
name = "web_chat"
path = "examples/web_chat/server.rs"

[[example]]
name = "audio_chat"
path = "examples/realtime/audio_chat.rs"

[[example]]
name = "video_chat"
path = "examples/realtime/video_chat.rs"


[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
env_logger = "0.11.8"
log = "0.4"
tokio = { version = "1.47.1", features = ["full"] }
jsonschema = "0.33.0"
validator = { version = "0.20.0", features = ["derive"] }
url = "2.5.4"
reqwest = { version = "0.12.23", features = ["json", "multipart", "stream"] }

base64 = "0.22.1"
chrono = "0.4"
async-trait = "0.1"
thiserror = "2.0.16"
futures = "0.3.31"
dashmap = "6.1"
rayon = "1.8"
once_cell = "1.19"
parking_lot = "0.12"
rmcp = { version = "0.6.4", features = ["client"], optional = true }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
futures-util = "0.3.31"

[features]
default = []
rmcp-kits = ["dep:rmcp"]

[dev-dependencies]
toml = "0.9.5"
