[package]
name = "zai-rs"
version = "0.1.14"
edition = "2024"
authors = ["anlang <2682525840@qq.com>"]
description = "一个 Rust SDK, 用于调用 智普AI API"
documentation = "https://docs.rs/zai-rs"
repository = "https://github.com/AnlangA/zai-rs"
license = "MIT"


[[example]]
name = "function_call"
path = "examples/function_call.rs"

[[example]]
name = "chat_text"
path = "examples/chat_text.rs"

[[example]]
name = "chat_vision"
path = "examples/chat_vision.rs"

[[example]]
name = "chat_voice"
path = "examples/chat_voice.rs"

[[example]]
name = "chat_loop"
path = "examples/chat_loop.rs"

[[example]]
name = "chat_stream"
path = "examples/chat_stream.rs"

[[example]]
name = "async_chat_text"
path = "examples/async_chat_text.rs"

[[example]]
name = "function_call_with_toolkits"
path = "examples/function_call_with_toolkits.rs"

[[example]]
name = "gen_video"
path = "examples/gen_video.rs"

[[example]]
name = "gen_image"
path = "examples/gen_image.rs"

[[example]]
name = "text_to_audio"
path = "examples/text_to_audio.rs"

[[example]]
name = "voice_clone"
path = "examples/voice_clone.rs"

[[example]]
name = "voice_list"
path = "examples/voice_list.rs"

[[example]]
name = "voice_delete"
path = "examples/voice_delete.rs"

[[example]]
name = "files_list"
path = "examples/files_list.rs"

[[example]]
name = "files_upload"
path = "examples/files_upload.rs"

[[example]]
name = "files_delete"
path = "examples/files_delete.rs"

[[example]]
name = "files_content"
path = "examples/files_content.rs"


[[example]]
name = "web_search"
path = "examples/web_search.rs"

[[example]]
name = "audio_to_text"
path = "examples/audio_to_text.rs"

[[example]]
name = "ocr"
path = "examples/ocr.rs"

[[example]]
name = "embedding"
path = "examples/embedding.rs"

[[example]]
name = "rerank"
path = "examples/rerank.rs"

[[example]]
name = "tokenizer"
path = "examples/tokenizer.rs"

[[example]]
name = "simple_moderation"
path = "examples/simple_moderation.rs"

[[example]]
name = "file_parser_demo"
path = "examples/file_parser_demo.rs"

[[example]]
name = "batches_create"
path = "examples/batches_create.rs"

[[example]]
name = "batches_retrieve"
path = "examples/batches_retrieve.rs"

[[example]]
name = "batches_cancel"
path = "examples/batches_cancel.rs"

[[example]]
name = "knowledge_list"
path = "examples/knowledge_list.rs"

[[example]]
name = "knowledge_create"
path = "examples/knowledge_create.rs"

[[example]]
name = "knowledge_retrieve"
path = "examples/knowledge_retrieve.rs"

[[example]]
name = "knowledge_update"
path = "examples/knowledge_update.rs"

[[example]]
name = "knowledge_delete"
path = "examples/knowledge_delete.rs"

[[example]]
name = "knowledge_capacity"
path = "examples/knowledge_capacity.rs"

[[example]]
name = "knowledge_document_list"
path = "examples/knowledge_document_list.rs"

[[example]]
name = "knowledge_document_upload_url"
path = "examples/knowledge_document_upload_url.rs"

[[example]]
name = "chat_coding_plan"
path = "examples/chat_coding_plan.rs"

[[example]]
name = "translation_bot"
path = "examples/translation_bot.rs"

[[example]]
name = "web_chat"
path = "examples/web_chat/server.rs"
required-features = ["web-example"]

[[example]]
name = "glm45_thinking_mode"
path = "examples/glm45_thinking_mode.rs"


[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
jsonschema = "0.46.2"
validator = { version = "0.20.0", features = ["derive"] }
url = "2.5.8"
reqwest = { version = "0.13.2", features = ["json", "multipart", "stream"] }

fastrand = "2.4.1"

regex = "1.12.3"

tracing = "0.1.44"

base64 = "0.22.1"
chrono = "0.4.44"
async-trait = "0.1.89"
thiserror = "2.0.18"
futures = "0.3.32"
dashmap = "6.1"
rayon = "1.12.0"
once_cell = "1.21.4"
parking_lot = "0.12.5"
rmcp = { version = "1.5.0", features = ["client"], optional = true }
axum = { version = "0.8.9", optional = true }
tower = { version = "0.5.3", optional = true }
tower-http = { version = "0.6.8", features = ["fs", "cors"], optional = true }
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[features]
default = []
rmcp-kits = ["dep:rmcp"]
web-example = ["dep:axum", "dep:tower", "dep:tower-http"]

[dev-dependencies]
toml = "1.1.2"
hyper = { version = "1.9.0", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }
http-body-util = "0.1.3"
http = "1.3"
bytes = "1.10"
env_logger = "0.11.10"
log = "0.4.29"
