[package]
name = "web_chat"
version = "2.0.0"
edition = "2021"
authors = ["AI Assistant <ai@example.com>"]
description = "Modern AI Chat Web Application with perfect markdown rendering and industry-leading UX"
license = "MIT"

[[bin]]
name = "web_chat"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.47.1", features = ["full"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Error handling
thiserror = "2.0.16"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Concurrent data structures
dashmap = "6.1"

# HTTP client for API calls
reqwest = { version = "0.12.23", features = ["json", "stream"] }

# Environment variables
dotenv = "0.15"

# Main zai-rs dependency
zai-rs = { path = "../.." }

# Futures for streaming
futures = "0.3.31"

# Configuration
config = "0.14"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true