[package]
name = "list_remote_mcp_tools"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
rmcp = { version = "0.6.4", features = ["client", "transport-sse-client-reqwest"] }
reqwest = { version = "0.12", features = ["json"] }
http = "1.0"
futures = "0.3"
sse-stream = "0.2"
